[gd_scene load_steps=6 format=3 uid="uid://3j1r001w2cyv"]

[ext_resource type="Script" uid="uid://dlgpfqos4toh4" path="res://scenes/magician_ability_display/magician_ability_display.gd" id="1_vu2nm"]
[ext_resource type="Material" uid="uid://de6lgys43decm" path="res://shaders/darken_blur_shader.tres" id="1_ytrke"]
[ext_resource type="Texture2D" uid="uid://cffk2skmtva81" path="res://assets/sprites/action_button_template.png" id="2_vu2nm"]
[ext_resource type="Material" uid="uid://dw4brgw8trggx" path="res://shaders/action_button_shader_material.tres" id="3_dpqxb"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_3ny4b"]

[node name="MagicianAbilityDisplay" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_vu2nm")

[node name="TextureRect" type="TextureRect" parent="."]
material = ExtResource("1_ytrke")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_3ny4b")

[node name="ExchangeHandsOption" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 536.937
offset_top = 58.6667
offset_right = 1070.94
offset_bottom = 591.667
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(267.159, 266.667)
texture = ExtResource("2_vu2nm")

[node name="Label" type="Label" parent="ExchangeHandsOption"]
layout_mode = 0
offset_left = -65.2174
offset_top = 89.8551
offset_right = 600.783
offset_bottom = 425.855
theme_override_font_sizes/font_size = 57
text = "Discard X 
Draw X "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Shader" type="Sprite2D" parent="ExchangeHandsOption"]
material = ExtResource("3_dpqxb")
position = Vector2(260.638, 256.075)
scale = Vector2(1.43571, 1.39385)
texture = ExtResource("2_vu2nm")

[node name="DiscardOption" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 63.6667
offset_top = 58.6667
offset_right = 597.667
offset_bottom = 591.667
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(266.667, 266.667)
texture = ExtResource("2_vu2nm")

[node name="Label" type="Label" parent="DiscardOption"]
layout_mode = 0
offset_left = -65.2174
offset_top = 89.8551
offset_right = 600.783
offset_bottom = 425.855
theme_override_font_sizes/font_size = 47
text = "Exchange 
Hands 
with 
Opponent"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Shader" type="Sprite2D" parent="DiscardOption"]
material = ExtResource("3_dpqxb")
position = Vector2(257.971, 258.249)
scale = Vector2(1.41128, 1.40201)
texture = ExtResource("2_vu2nm")

[connection signal="gui_input" from="ExchangeHandsOption" to="." method="_on_exchange_hands_option_gui_input"]
[connection signal="mouse_entered" from="ExchangeHandsOption" to="." method="_on_exchange_hands_option_mouse_entered"]
[connection signal="mouse_exited" from="ExchangeHandsOption" to="." method="_on_exchange_hands_option_mouse_exited"]
[connection signal="gui_input" from="DiscardOption" to="." method="_on_discard_option_gui_input"]
[connection signal="mouse_entered" from="DiscardOption" to="." method="_on_discard_option_mouse_entered"]
[connection signal="mouse_exited" from="DiscardOption" to="." method="_on_discard_option_mouse_exited"]
